--- a/#source/html/content/about.html
+++ b/#source/html/content/about.html
@@ -1,57 +1,48 @@
 <!----------------about------------------->
 <section class="about">
-	<div class="about__row">
+	<div class="about__conteiner">
+		<div class="about__row">
 
-		<div class="about__column">
-			<div class="about__image">
-				<img src="assets/images/about/about.png" alt="#">
-			</div>
-		</div>
-
-
-		<div class="about__column">
-			<div class="about__description">
-
-				<h2 class="title">What makes Smoothie an awesome drink? </h2>
-
-				<ul class="about__list">
-					<li class="about__item">
-						<a class="about__link" href="#">Crunchy Puffs Texture</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">100 Calories per drink</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">4g Plant Protein </a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">
-							Good source of Magnesium & Vitamin B6
-						</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">
-							No Sugar in our Savory Flavors
-						</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">Non-GMO, Vegan & Paleo</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">Gluten-Free & Grain-Free</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#"> Corn-Free & Soy-Free</a>
-					</li>
-				</ul>
-
-				<div class="bth">
-					<a href="#">About Organic Smoothie</a>
+			<div class="about__column">
+				<div class="about__image ">
+					<div class="about__image-wrapper">
+						<img src="assets/images/about/about.png" alt="#">
+					</div>
 				</div>
-
 			</div>
-		</div>
 
+
+			<div class="about__column">
+				<div class="about__description">
+
+					<h2 class="title--white about__title">What makes Smoothie an <span> awesome drink? </span></h2>
+
+					<ul class="about__list">
+						<li class="about__item">Crunchy Puffs Texture</>
+						</li>
+						<li class="about__item">100 Calories per drink</>
+						</li>
+						<li class="about__item">4g Plant Protein </>
+						</li>
+						<li class="about__item">Good source of Magnesium & Vitamin B6
+						</li>
+						<li class="about__item">No Sugar in our Savory Flavors
+						</li>
+						<li class="about__item">Non-GMO, Vegan & Paleo</>
+						</li>
+						<li class="about__item">Gluten-Free & Grain-Free</>
+						</li>
+						<li class="about__item">Corn-Free & Soy-Free</li>
+					</ul>
+
+					<button class="bth  about__bth " type="submit">
+						About Organic Smoothie</button>
+
+
+				</div>
+			</div>
+
+		</div>
 	</div>
 </section>
 
