--- a/#source/html/content/products.html
+++ b/#source/html/content/products.html
@@ -1,71 +1,72 @@
 <!----------------products------------------->
 <section class="products">
-	<div class="products__row">
+	<div class="products__conteiner">
+		<div class="products__row">
 
-		<div class="products__column">
-			<div class="products__wrapper">
+			<div class="products__column">
+				<div class="products__wrapper">
 
-				<div class="products__image">
-					<img src="assets/images/products/Img-1.png" alt="">
+					<div class="products__image">
+						<img src="assets/images/products/Img-1.png" alt="">
+					</div>
+
+					<h3 class="title-h3 ">Dark Chocolate Smoothie</h3>
+					<p class="text products__text">100 ml</p>
+
+					<button class="bth  products__bth" type="submit">Buy</button>
+
 				</div>
-
-				<h3 class="title-h3 ">Dark Chocolate Smoothie</h3>
-				<p class="text products__text">100 ml</p>
-				<div class="bth  products__bth">
-					<a href="#">Buy</a>
-				</div>
-
 			</div>
-		</div>
 
-		<div class="products__column">
-			<div class="products__wrapper">
+			<div class="products__column products__column--green">
+				<div class="products__wrapper">
 
-				<div class="products__image">
-					<img src="assets/images/products/Img-2.png" alt="">
+					<div class="products__image">
+						<img src="assets/images/products/Img-2.png" alt="">
+					</div>
+
+					<h3 class="title-h3 ">Vegan Lettuce Smoothie</h3>
+					<p class="text products__text"> 100 ml</p>
+
+					<button class="bth  products__bth" type="submit">Buy</button>
+
+
 				</div>
-
-				<h3 class="title-h3 ">Vegan Lettuce Smoothie</h3>
-				<p class="text products__text"> 100 ml</p>
-				<div class="bth products__bth">
-					<a href="#">Buy</a>
-				</div>
-
 			</div>
-		</div>
 
-		<div class="products__column">
-			<div class="products__wrapper">
+			<div class="products__column products__column--yellow">
+				<div class="products__wrapper">
 
-				<div class="products__image">
-					<img src="assets/images/products/Img-3.png" alt="">
+					<div class="products__image">
+						<img src="assets/images/products/Img-3.png" alt="">
+					</div>
+
+					<h3 class="title-h3 ">Lemon Ginger Smoothie</h3>
+					<p class="text products__text"> 100 ml</p>
+
+					<button class="bth  products__bth" type="submit">Buy</button>
+
+
 				</div>
-
-				<h3 class="title-h3 ">Lemon Ginger Smoothie</h3>
-				<p class="text products__text"> 100 ml</p>
-				<div class="bth  products__bth">
-					<a href="#">Buy</a>
-				</div>
-
 			</div>
-		</div>
 
-		<div class="products__column">
-			<div class="products__wrapper">
+			<div class="products__column products__column--orang">
+				<div class="products__wrapper">
 
-				<div class="products__image">
-					<img src="assets/images/products/Img-4.png" alt="">
+					<div class="products__image">
+						<img src="assets/images/products/Img-4.png" alt="">
+					</div>
+
+					<h3 class="title-h3 ">Turmeric Garlic Smoothie</h3>
+					<p class="text products__text">100 ml</p>
+
+					<button class="bth  products__bth" type="submit">Buy</button>
+
+
 				</div>
-
-				<h3 class="title-h3 ">Turmeric Garlic Smoothie</h3>
-				<p class="text products__text">100 ml</p>
-				<div class="bth  products__bth">
-					<a href="#">Buy</a>
-				</div>
-
 			</div>
-		</div>
 
+		</div>
 	</div>
 </section>
 
