--- a/#source/html/content/story.html
+++ b/#source/html/content/story.html
@@ -6,23 +6,21 @@
 			<div class="story__column">
 				<div class="story__wrapper">
 
-					<h2 class="title">Our story/h2>
-						<p class="text">
-							As products typically using raw fruits or vegetables,
-							smoothies include dietary fiber (e.g. pulp, skin, and
-							seeds) and so are thicker than fruit juice, often with a
-							consistency similar to a milkshake.
-						</p>
+					<h2 class="title title--left">Our story</h2>
+					<p class="text  text--left story__text">
+						As products typically using raw fruits or vegetables,
+						smoothies include dietary fiber (e.g. pulp, skin, and
+						seeds) and so are thicker than fruit juice, often with a
+						consistency similar to a milkshake.
+					</p>
 
-						<div class="bth">
-							<a href="">Who we are</a>
-						</div>
+					<button class="bth storu__bth" type="submit">Who we are</button>
 
 				</div>
 			</div>
 
 			<div class="story__column">
-				<div class="story__image">
+				<div class="story__image ibg">
 					<img src="assets/images/story/Stamp.png" alt="story">
 				</div>
 			</div>
