--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
 			</div>
 			<div class="header__bottom">
 
-				<a class="bth header__bth" href="#" alt="#">
-					Shop Now
-				</a>
+				<button class="bth header__bth" type="submit">Shop Now</button>
 
 			</div>
 		</div>
@@ -213,130 +211,122 @@
 <!----------------smoothies------------------->
 <!----------------about------------------->
 <section class="about">
-	<div class="about__row">
+	<div class="about__conteiner">
+		<div class="about__row">
 
-		<div class="about__column">
-			<div class="about__image">
-				<img src="assets/images/about/about.png" alt="#">
-			</div>
-		</div>
-
-
-		<div class="about__column">
-			<div class="about__description">
-
-				<h2 class="title">What makes Smoothie an awesome drink? </h2>
-
-				<ul class="about__list">
-					<li class="about__item">
-						<a class="about__link" href="#">Crunchy Puffs Texture</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">100 Calories per drink</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">4g Plant Protein </a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">
-							Good source of Magnesium & Vitamin B6
-						</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">
-							No Sugar in our Savory Flavors
-						</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">Non-GMO, Vegan & Paleo</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#">Gluten-Free & Grain-Free</a>
-					</li>
-					<li class="about__item">
-						<a class="about__link" href="#"> Corn-Free & Soy-Free</a>
-					</li>
-				</ul>
-
-				<div class="bth">
-					<a href="#">About Organic Smoothie</a>
+			<div class="about__column">
+				<div class="about__image ">
+					<div class="about__image-wrapper">
+						<img src="assets/images/about/about.png" alt="#">
+					</div>
 				</div>
-
 			</div>
-		</div>
 
+
+			<div class="about__column">
+				<div class="about__description">
+
+					<h2 class="title--white about__title">What makes Smoothie an <span> awesome drink? </span></h2>
+
+					<ul class="about__list">
+						<li class="about__item">Crunchy Puffs Texture</>
+						</li>
+						<li class="about__item">100 Calories per drink</>
+						</li>
+						<li class="about__item">4g Plant Protein </>
+						</li>
+						<li class="about__item">Good source of Magnesium & Vitamin B6
+						</li>
+						<li class="about__item">No Sugar in our Savory Flavors
+						</li>
+						<li class="about__item">Non-GMO, Vegan & Paleo</>
+						</li>
+						<li class="about__item">Gluten-Free & Grain-Free</>
+						</li>
+						<li class="about__item">Corn-Free & Soy-Free</li>
+					</ul>
+
+					<button class="bth  about__bth " type="submit">
+						About Organic Smoothie</button>
+
+
+				</div>
+			</div>
+
+		</div>
 	</div>
 </section>
 
 <!----------------about------------------->
 <!----------------products------------------->
 <section class="products">
-	<div class="products__row">
+	<div class="products__conteiner">
+		<div class="products__row">
 
-		<div class="products__column">
-			<div class="products__wrapper">
+			<div class="products__column">
+				<div class="products__wrapper">
 
-				<div class="products__image">
-					<img src="assets/images/products/Img-1.png" alt="">
+					<div class="products__image">
+						<img src="assets/images/products/Img-1.png" alt="">
+					</div>
+
+					<h3 class="title-h3 ">Dark Chocolate Smoothie</h3>
+					<p class="text products__text">100 ml</p>
+
+					<button class="bth  products__bth" type="submit">Buy</button>
+
 				</div>
-
-				<h3 class="title-h3 ">Dark Chocolate Smoothie</h3>
-				<p class="text products__text">100 ml</p>
-				<div class="bth  products__bth">
-					<a href="#">Buy</a>
-				</div>
-
 			</div>
-		</div>
 
-		<div class="products__column">
-			<div class="products__wrapper">
+			<div class="products__column products__column--green">
+				<div class="products__wrapper">
 
-				<div class="products__image">
-					<img src="assets/images/products/Img-2.png" alt="">
+					<div class="products__image">
+						<img src="assets/images/products/Img-2.png" alt="">
+					</div>
+
+					<h3 class="title-h3 ">Vegan Lettuce Smoothie</h3>
+					<p class="text products__text"> 100 ml</p>
+
+					<button class="bth  products__bth" type="submit">Buy</button>
+
+
 				</div>
-
-				<h3 class="title-h3 ">Vegan Lettuce Smoothie</h3>
-				<p class="text products__text"> 100 ml</p>
-				<div class="bth products__bth">
-					<a href="#">Buy</a>
-				</div>
-
 			</div>
-		</div>
 
-		<div class="products__column">
-			<div class="products__wrapper">
+			<div class="products__column products__column--yellow">
+				<div class="products__wrapper">
 
-				<div class="products__image">
-					<img src="assets/images/products/Img-3.png" alt="">
+					<div class="products__image">
+						<img src="assets/images/products/Img-3.png" alt="">
+					</div>
+
+					<h3 class="title-h3 ">Lemon Ginger Smoothie</h3>
+					<p class="text products__text"> 100 ml</p>
+
+					<button class="bth  products__bth" type="submit">Buy</button>
+
+
 				</div>
-
-				<h3 class="title-h3 ">Lemon Ginger Smoothie</h3>
-				<p class="text products__text"> 100 ml</p>
-				<div class="bth  products__bth">
-					<a href="#">Buy</a>
-				</div>
-
 			</div>
-		</div>
 
-		<div class="products__column">
-			<div class="products__wrapper">
+			<div class="products__column products__column--orang">
+				<div class="products__wrapper">
 
-				<div class="products__image">
-					<img src="assets/images/products/Img-4.png" alt="">
+					<div class="products__image">
+						<img src="assets/images/products/Img-4.png" alt="">
+					</div>
+
+					<h3 class="title-h3 ">Turmeric Garlic Smoothie</h3>
+					<p class="text products__text">100 ml</p>
+
+					<button class="bth  products__bth" type="submit">Buy</button>
+
+
 				</div>
-
-				<h3 class="title-h3 ">Turmeric Garlic Smoothie</h3>
-				<p class="text products__text">100 ml</p>
-				<div class="bth  products__bth">
-					<a href="#">Buy</a>
-				</div>
-
 			</div>
-		</div>
 
+		</div>
 	</div>
 </section>
 
@@ -349,23 +339,21 @@
 			<div class="story__column">
 				<div class="story__wrapper">
 
-					<h2 class="title">Our story/h2>
-						<p class="text">
-							As products typically using raw fruits or vegetables,
-							smoothies include dietary fiber (e.g. pulp, skin, and
-							seeds) and so are thicker than fruit juice, often with a
-							consistency similar to a milkshake.
-						</p>
+					<h2 class="title title--left">Our story</h2>
+					<p class="text  text--left story__text">
+						As products typically using raw fruits or vegetables,
+						smoothies include dietary fiber (e.g. pulp, skin, and
+						seeds) and so are thicker than fruit juice, often with a
+						consistency similar to a milkshake.
+					</p>
 
-						<div class="bth">
-							<a href="">Who we are</a>
-						</div>
+					<button class="bth storu__bth" type="submit">Who we are</button>
 
 				</div>
 			</div>
 
 			<div class="story__column">
-				<div class="story__image">
+				<div class="story__image ibg">
 					<img src="assets/images/story/Stamp.png" alt="story">
 				</div>
 			</div>
