--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -83,9 +83,7 @@
 			</div>
 			<div class="header__bottom">
 
-				<a class="bth header__bth" href="#" alt="#">
-					Shop Now
-				</a>
+				<button class="bth header__bth" type="submit">Shop Now</button>
 
 			</div>
 		</div>
