--- a/index.html
+++ b/index.html
@@ -260,73 +260,71 @@
 <!----------------about------------------->
 <!----------------products------------------->
 <section class="products">
-	<div class="products__conteiner">
-		<div class="products__row">
+	<div class="products__row">
 
-			<div class="products__column">
-				<div class="products__wrapper">
+		<div class="products__column">
+			<div class="products__wrapper">
 
-					<div class="products__image">
-						<img src="assets/images/products/Img-1.png" alt="">
-					</div>
-
-					<h3 class="title-h3 ">Dark Chocolate Smoothie</h3>
-					<p class="text products__text">100 ml</p>
-
-					<button class="bth  products__bth" type="submit">Buy</button>
-
+				<div class="products__image">
+					<img src="assets/images/products/Img-1.png" alt="">
 				</div>
+
+				<h3 class="title-h3 ">Dark Chocolate Smoothie</h3>
+				<p class="text products__text">100 ml</p>
+
+				<button class="bth  products__bth" type="submit">Buy</button>
+
 			</div>
-
-			<div class="products__column products__column--green">
-				<div class="products__wrapper">
-
-					<div class="products__image">
-						<img src="assets/images/products/Img-2.png" alt="">
-					</div>
-
-					<h3 class="title-h3 ">Vegan Lettuce Smoothie</h3>
-					<p class="text products__text"> 100 ml</p>
-
-					<button class="bth  products__bth" type="submit">Buy</button>
-
-
-				</div>
-			</div>
-
-			<div class="products__column products__column--yellow">
-				<div class="products__wrapper">
-
-					<div class="products__image">
-						<img src="assets/images/products/Img-3.png" alt="">
-					</div>
-
-					<h3 class="title-h3 ">Lemon Ginger Smoothie</h3>
-					<p class="text products__text"> 100 ml</p>
-
-					<button class="bth  products__bth" type="submit">Buy</button>
-
-
-				</div>
-			</div>
-
-			<div class="products__column products__column--orang">
-				<div class="products__wrapper">
-
-					<div class="products__image">
-						<img src="assets/images/products/Img-4.png" alt="">
-					</div>
-
-					<h3 class="title-h3 ">Turmeric Garlic Smoothie</h3>
-					<p class="text products__text">100 ml</p>
-
-					<button class="bth  products__bth" type="submit">Buy</button>
-
-
-				</div>
-			</div>
-
 		</div>
+
+		<div class="products__column products__column--green">
+			<div class="products__wrapper">
+
+				<div class="products__image">
+					<img src="assets/images/products/Img-2.png" alt="">
+				</div>
+
+				<h3 class="title-h3 ">Vegan Lettuce Smoothie</h3>
+				<p class="text products__text"> 100 ml</p>
+
+				<button class="bth  products__bth" type="submit">Buy</button>
+
+
+			</div>
+		</div>
+
+		<div class="products__column products__column--yellow">
+			<div class="products__wrapper">
+
+				<div class="products__image">
+					<img src="assets/images/products/Img-3.png" alt="">
+				</div>
+
+				<h3 class="title-h3 ">Lemon Ginger Smoothie</h3>
+				<p class="text products__text"> 100 ml</p>
+
+				<button class="bth  products__bth" type="submit">Buy</button>
+
+
+			</div>
+		</div>
+
+		<div class="products__column products__column--orang">
+			<div class="products__wrapper">
+
+				<div class="products__image">
+					<img src="assets/images/products/Img-4.png" alt="">
+				</div>
+
+				<h3 class="title-h3 ">Turmeric Garlic Smoothie</h3>
+				<p class="text products__text">100 ml</p>
+
+				<button class="bth  products__bth" type="submit">Buy</button>
+
+
+			</div>
+		</div>
+
 	</div>
 </section>
 
@@ -511,13 +509,13 @@
 			<!----colum-------------------------------------------------->
 			<div class="footer__column">
 				<div class="footer__image">
-					<img src="#" alt="">
+					<img src="assets/images/header/Logo.png" alt="#">
 				</div>
 			</div>
 			<!----colum-------------------------------------------------->
 			<div class="footer__column">
 
-				<h3 class="title-h3">Information</h3>
+				<h3 class="title-h3 footer__title">Information</h3>
 
 				<ul class="footer__list">
 					<li class="footer__item">
@@ -547,65 +545,69 @@
 			<!----colum-------------------------------------------------->
 			<div class="footer__column">
 
-				<h3 class="title-h3">Payment</h3>
+				<h3 class="title-h3 footer__title">Payment</h3>
 				<!---sub-colum-------------------------------------------------->
-				<ul class="icon__column">
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/AMEX.svg" alt="#">
+				<ul class="footer-icon__list">
+
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/AMEX.png" alt="#">
 						</a>
 					</li>
 
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/Paypal.svg" alt="#">
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/Apple-Pay.png" alt="#">
 						</a>
 					</li>
 
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/Maestro.svg" alt="#">
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/Maestro.png" alt="#">
 						</a>
 					</li>
 
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/Discover.svg" alt="#">
-						</a>
-					</li>
-				</ul>
-				<!--- sub-colum-------------------------------------------------->
-				<ul class="icon__column">
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/JCB.svg" alt="#">
-						</a>
-					</li>
-
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/Mastercard.svg" alt="#">
-						</a>
-					</li>
-
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/Paypal.svg" alt="#">
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/Discover.png" alt="#">
 						</a>
 					</li>
 
 				</ul>
 				<!--- sub-colum-------------------------------------------------->
-				<ul class="icon__column">
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/Shopify-Pay.svg" alt="#">
+				<ul class="footer-icon__list">
+
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/JCB.png" alt="#">
 						</a>
 					</li>
 
-					<li class="icon__list">
-						<a class="icon__link" href="#">
-							<img src="assets/images/footer/Visa.svg" alt="#">
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/Mastercard.png" alt="#">
+						</a>
+					</li>
+
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/Paypal.png" alt="#">
+						</a>
+					</li>
+
+				</ul>
+				<!--- sub-colum-------------------------------------------------->
+				<ul class="footer-icon__list">
+
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/Shopify-Pay.png" alt="#">
+						</a>
+					</li>
+
+					<li class="footer-icon__item">
+						<a class="footer-icon__link" href="#">
+							<img src="assets/images/footer/Visa.png" alt="#">
 						</a>
 					</li>
 
@@ -614,35 +616,42 @@
 			</div>
 			<!----colum-------------------------------------------------->
 			<div class="footer__column">
-				<h3 class="title">Don’t miss out!</h3>
+				<h3 class="title-h3 footer__title">Don’t miss out!</h3>
 
 				<div class="input">
-					<input class="input-search" type="search" name="search" placeholder="">
-					<img class="icon-letter" src="#" alt="">
+
+					<input class="input__search" type="search" name="search" placeholder="Subscribe to our newsletter">
+
 				</div>
 
-				<div class="footer__row">
+				<div class="footer__row footer__row--df">
 
-					<h3 class="footer__text"></h3>
+					<h3 class="footer__text">Follow Us</h3>
 					<!--- sub-colum-------------------------------------------->
-					<ul class="icon__column">
-						<li class="icon__list">
-							<a class="icon__link" href="#">
-								<img src="assets/images/footer/Facebook.svg" alt="#">
+					<ul class="footer-icon__list">
+
+						<li class="footer-icon__item">
+							<a class="footer-icon__link" href="#">
+								<img src="assets/images/footer/Facebook.png" alt="#">
 							</a>
 						</li>
+
 						<!--- sub-colum-------------------------------------------->
-						<li class="icon__list">
-							<a class="icon__link" href="#">
-								<img src="assets/images/footer/Pinterest.svg" alt="#">
+
+						<li class="footer-icon__item">
+							<a class="footer-icon__link" href="#">
+								<img src="assets/images/footer/Pinterest.png" alt="#">
 							</a>
 						</li>
+
 						<!--- sub-colum-------------------------------------------->
-						<li class="icon__list">
-							<a class="icon__link" href="#">
-								<img src="assets/images/footer/Instagram.svg" alt="#">
+
+						<li class="footer-icon__item">
+							<a class="footer-icon__link" href="#">
+								<img src="assets/images/footer/Instagram.png" alt="#">
 							</a>
 						</li>
+
 						<!--- sub-colum-------------------------------------------->
 					</ul>
 
@@ -651,17 +660,23 @@
 			<!----colum-------------------------------------------->
 		</div>
 
-		<div class="footer__bottom">
 
-			<small class="author-rights"></small>
+	</div>
+	<div class="footer__bottom--bg">
+		<div class="conteiner">
+			<div class="footer__bottom">
+				<small class="author-rights">© 2020. All Rights Reserved. </small>
 
-			<p class="text footer__bottom-text"></p>
+				<p class="footer__bottom-text">Go top</p>
 
-			<div class="footer__bottom-image">
-				<img src="#" alt="">
+				<div class="footer__bottom-image">
+					<img src="#" alt="">
+				</div>
 			</div>
+
 		</div>
 	</div>
+
 </section>
 
 
