--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
 	<img src="assets/images/header/img.png" alt="#">
 </div>
 
+<div class="banner" id="bad">
+	<img src="../assets/images/products/Img-1.png" alt="">
+	<p class=" text text__play">Купи!!!</p>
+</div>
+
 <!----------------Header------------------->
 
 <!--*************************************-->
