--- a/#source/html/content/story.html
+++ b/#source/html/content/story.html
@@ -21,9 +21,9 @@
 
 			<div class="story__column">
 				<div class="story__image ibg">
-					<img src="../assets/images/story/img.png" alt="story">
+					<img src="assets/images/story/img.png" alt="story">
 				</div>
-				<img class="story__image--stamp" src="../assets/images/story/Stamp.png" alt="">
+				<img class="story__image--stamp" src="assets/images/story/Stamp.png" alt="">
 
 			</div>
 
