--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -100,7 +100,7 @@
 </div>
 
 <div class="banner" id="bad">
-	<img src="../assets/images/products/Img-1.png" alt="">
+	<img src="assets/images/products/Img-1.png" alt="">
 	<p class=" text text__play">Купи!!!</p>
 </div>
 
