--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </div>
 
 <div class="banner" id="bad">
-	<img src="../assets/images/products/Img-1.png" alt="">
+	<img src="assets/images/products/Img-1.png" alt="">
 	<p class=" text text__play">Купи!!!</p>
 </div>
 
@@ -361,9 +361,9 @@
 
 			<div class="story__column">
 				<div class="story__image ibg">
-					<img src="../assets/images/story/img.png" alt="story">
+					<img src="assets/images/story/img.png" alt="story">
 				</div>
-				<img class="story__image--stamp" src="../assets/images/story/Stamp.png" alt="">
+				<img class="story__image--stamp" src="assets/images/story/Stamp.png" alt="">
 
 			</div>
 
